@@ -1,4 +1,5 @@
 0.1.0
+Changed type "what to "query" 
 Added type "text".
 Changed type "gettext to "input" 
 Added font dialog.
